Add UDF to study and endpoint forms (#906)
* render udf form inside study form

* Add model for saved data from UDF

* remove duplicate widget

* add todo for form tag issue

* render saved UDF data on study detail page

* add mixin for adding UDF to detail pages

* lint

* backport changes for demo

* reduce queries in forms w/ UDF

* changes from review

* remove generic relation

* remove import

* fix test now that rendering works properly

* fix udf detail pages

* move fixture modelbinding to different assessment

* fix tests

* add dynamicformlisteners to necessary pages

* create UDFCache class

* add cache to endpoint form

* set udf contents when form is saved

* integrate cache into detail pages

* delete cache for modelbinding post save

* add caching to study form

* clean up cache class

* fix content cache to work on detail pages

* fix attribute error and add type hints

* format templates

* fix curlies, change field name

* reformat test html

* refactor common code into a form mixin

* load JS with DynamicForm or DynamicFormWidget

* add db constraint

* rename UDF table fragment

* fix table template layout

* fix unique-together constraint

* fix signals

* bonus - improve type annotations for cacheable

* refactor cache

* refactor content list

* add tests

---------

Co-authored-by: Casey Hansen <42587248+caseyhans@users.noreply.github.com>
Co-authored-by: casey1173 <caseyhansen1999@gmail.com>
Co-authored-by: Andy Shapiro <shapiromatron@gmail.com>

--- a/hawc/apps/study/templates/study/study_detail.html
+++ b/hawc/apps/study/templates/study/study_detail.html
@@ -70,6 +70,8 @@
 
   <div id="study_details"></div>
 
+  {% include "udf/fragments/table.html" with object=udf_content %}
+
   {% if obj_perms.edit and internal_communications|hastext %}
     <table class="table table-sm table-striped">
       <colgroup>
