--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -8,7 +8,7 @@
     {% endif %}
   </div>
   <p class="text-muted vw75 mt-0 mb-2">
-    Literature workflows define groups of references in a specific state of tagging. References must match all admission criteria and none of the removal criteria to fit in a workflow. Workflows filter references for the reference tagging page and—if enabled—the conflict resolution page in HAWC. Linked tiles to some of these workflow-filtered pages can be added to the Literature Review home page for quick access.
+    Literature workflows define groups of references in a specific state of tagging. References must match all admission criteria and none of the removal criteria to fit in a workflow. Workflows filter references on the reference tagging page and optionally the conflict resolution page. Workflow tiles can be added to the Literature Review page for quick access.
   </p>
   {% include "lit/fragments/workflow_list.html" %}
 {% endblock %}
