started time spent export

--- a/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
@@ -1,4 +1,9 @@
 {% block content %}
+  <div class="d-flex">
+    {% actions %}
+      <a class="dropdown-item" href="{% url 'mgmt:api:assessment-tasks' assessment_pk %}?format=xlsx">Download Time Spent Export (xlsx)</a>
+    {% endactions %}
+  </div>
   <div class="card-columns">
     {% analytics_card value=total_time_spent label='spent on assessment' %}
   </div>
