Render tag UDFs in the Reference Tagging view (#913)
* render udf form inside study form

* Add model for saved data from UDF

* remove duplicate widget

* add todo for form tag issue

* render saved UDF data on study detail page

* add mixin for adding UDF to detail pages

* lint

* add methods for rendering tag forms

* fix errors when rendering tag forms

* cache html

* move to get_app_config

* render udfs on the tag page
currently renders all udfs even if no tags are selected

* add tag udf content to admin site

* wip set up api to save udf data

* add tag udf data into ref.to_dict

* fix templates

* fix detail pages for model/tag binding

* fix bugs for demo

* improve UDF form layout

* initialize/save UDF content

* add udf content to detail page

* fix update or create mistake

* backport changes for demo

* reduce queries in forms w/ UDF

* changes from review

* remove generic relation

* remove import

* fix test now that rendering works properly

* fix udf detail pages

* move fixture modelbinding to different assessment

* fix tests

* lint js

* add dynamicformlisteners to necessary pages

* fix formatting and tests

* fix merge with other UDF branch

* fix saving and show correct UDFs

* lint

* create UDFCache class

* add cache to endpoint form

* set udf contents when form is saved

* integrate cache into detail pages

* delete cache for modelbinding post save

* add caching to study form

* clean up cache class

* fix content cache to work on detail pages

* fix attribute error and add type hints

* update udf with values

* return failure

* remove store inject

* caching, formatting

* maintain UDF values

* add collapsed view

* overwrite state on save

* work with other field types

* add unique_together constraint

* switch format for multi checkboxes

* update tag form stylings

* lint

* add form error handling

* updat

--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -8,7 +8,7 @@
     {% endif %}
   </div>
   <p class="text-muted vw75 mt-0 mb-2">
-    Literature workflows define groups of references in a specific state of tagging. References must match all admission criteria and none of the removal criteria to fit in a workflow. Workflows can filter references for various pages in HAWC; like the tagging, conflict resolution, and list views. Linked tiles to some of these workflow-filtered pages can be added to the Literature Review home page for quick access.
+    Literature workflows define groups of references in a specific state of tagging. References must match all admission criteria and none of the removal criteria to fit in a workflow. Workflows filter references on the reference tagging page and optionally the conflict resolution page. Workflow tiles can be added to the Literature Review page for quick access.
   </p>
   {% include "lit/fragments/workflow_list.html" %}
 {% endblock %}
