--- a/hawc/templates/base.html
+++ b/hawc/templates/base.html
@@ -80,7 +80,7 @@
 
               {% block content_header %}{% endblock content_header %}
               {% block content_outer %}
-                <div class="row  overflow-auto mb-4"  style="min-height: 95vh;">
+                <div class="row overflow-auto mb-4" style="min-height: 48rem;">
                   <div class="col overflow-auto">
                     {% block content %}{% endblock content %}
                   </div>
