--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -108,8 +108,17 @@ tfoot > tr > td {
 .bg-gray {
     background-color: #e8e8e8;
 }
-.clickable:hover .bg-gray {
-    background-color: #d1d1d1;
+.alert-danger {
+    background-color: #ffd0d0;
+}
+.bg-pink {
+    background-color: #ffd0d0;
+}
+.clickable:hover.bg-gray {
+    background-color: #d1d1d1 !important;
+}
+.clickable:hover.bg-pink {
+    background-color: #ff9595b3 !important;
 }
 .box-shadow {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -464,6 +473,18 @@ div.smart-tag.active {
     border-radius: 7px;
     height: 50rem;
 }
+.alert.slide {
+    border: none;
+    overflow: hidden;
+}
+.alert.slide.gone {
+    height: 0px;
+    padding: 0 1.25rem;
+}
+.alert.slide.showing {
+    height: 75px;
+    transition: all 0.5s ease-out;
+}
 .ref_small {
     font-size: 0.8465em;
     display: block;
@@ -564,6 +585,10 @@ div.smart-tag.active {
     overflow-wrap: break-word;
     word-break: break-word;
     word-wrap: break-word;
+}
+
+.border-bottom-light {
+    border-bottom: 2px solid #c7c7c7 !important;
 }
 
 .conflict-reference-li {
@@ -901,6 +926,9 @@ table.bordered td {
 .smaller {
     font-size: .8em;
     font-weight: 400;
+}
+.m-xs {
+    margin: 0.1rem !important;
 }
 
 /* table column text alignment */
