--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -18,6 +18,11 @@
         window.app.HAWCUtils.dynamicFormListeners();
         $("#schema-preview-frame").collapse("show");
       });
+      $('#load-example').on("click", function(e){
+        e.preventDefault();
+        const demo = '{"fields": [{"type": "char","name": "name","label": "Name","help_text": "First and last name","css_class": "col-6"},{"type": "integer","name": "age","required": false,"label": "Age","min_value": 21,"css_class": "col-6"},{"type": "multiple_choice","name": "favorite_foods","required": false,"label": "Favorite foods","widget": "checkbox_select_multiple","choices": [["pizza", "Pizza"],["ice_cream", "Ice cream"],["taco", "Tacos"]]}]}';
+        $('#id_schema').val(demo)
+      })
     });
   </script>
 {% endblock extrajs %}
