--- a/hawc/apps/udf/templates/udf/fragments/udf_row.html
+++ b/hawc/apps/udf/templates/udf/fragments/udf_row.html
@@ -1,32 +1,33 @@
 <div class="list-group-item list-group-item-flush p-4" {% if binding %} hx-target="this" hx-swap="outerHTML" id="{{binding.id}}-binding-row" {% endif %}>
   <div class="d-flex align-items-start justify-content-between">
+
     <div class="col-md-11 px-0">
       <div class="d-flex align-items-center rounded {% if binding %}binding-title{% endif %}">
         <p class="mb-0 font-weight-bold" style="font-size: 1.25rem;"><span {% if binding %} class="rounded bg-lightblue px-2 py-1" {% endif %}>{{udf.name}}</span></p>
         {% if udf.deprecated %}
-          <span class="badge ml-2 p-1 text-danger border border-danger">
-            Deprecated</span>
+          <span class="badge ml-2 p-1 text-danger border border-danger">Deprecated</span>
         {% endif %}
         <p class="my-0 ml-1" style="font-size: 1.25rem;">
           {% if binding_type and binding_type == tag_binding %} bound to <span class="refTag my-0 mx-1 px-1 py-0">{{binding.tag_name}}</span> tag{% endif %}
-          {% if binding_type and binding_type == model_binding %} bound to <b>{{binding.content_type}}</b> {% endif %}
+          {% if binding_type and binding_type == model_binding %} bound to <b>{{binding.content_type}}</b>{% endif %}
         </p>
       </div>
       <i class="text-muted my-0 d-block" title="{{udf.description}}" style="text-overflow:ellipsis; overflow:hidden; white-space: nowrap;">{{udf.description}}</i>
     </div>
+
     {% if binding %}
       {% if permissions.edit_assessment or obj_perms.edit_assessment %}
         <button class="btn outline-btn px-3" type="button" hx-indicator="#spinner-{{binding_type}}-{{binding.pk}}" hx-get="{{ binding.get_update_url }}">Update</button>
       {% endif %}
     {% elif udf.can_edit %}
-      <a class="btn outline-btn px-3" href="{{udf.get_update_url}}">
-        Update
-      </a>
+      <a class="btn outline-btn px-3" href="{{udf.get_update_url}}">Update</a>
     {% endif %}
+
   </div>
   <div class="d-flex align-items-start flex-wrap udf-info-row">
+
     <div class="card mt-2 mr-2 flex-shrink-0">
-      <a class="px-3 py-2 clickable box-shadow-minor" data-toggle="collapse" href="#udf-{{binding_type}}-{{udf.id}}-{{binding.id}}-preview" aria-expanded="false" aria-controls="udf-{{udf.id}}-{{binding.id}}-preview">Preview Form &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i> </a>
+      <a class="px-3 py-2 clickable box-shadow-minor" data-toggle="collapse" href="#udf-{{binding_type}}-{{udf.id}}-{{binding.id}}-preview" aria-expanded="false" aria-controls="udf-{{udf.id}}-{{binding.id}}-preview">Preview Form &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
     </div>
 
     {% if not binding %}
@@ -43,6 +44,7 @@
         {% endif %}
       </div>
     {% endif %}
+
     <div class="card mt-2 mr-2 flex-shrink-0" style="width: 10rem;">
       {% if udf.editors.exists %}
         <a class="p-2 mb-0 text-center box-shadow-minor  {% if udf.editors.exists %} clickable {% endif %}" data-toggle="collapse" href="#udf-{{binding_type}}-{{udf.id}}-{{binding.id}}-editors" aria-expanded="false" aria-controls="#udf-{{binding_type}}-{{udf.id}}-{{binding.id}}-editors" style="position:relative; z-index: 1; scrollbar-gutter: stable; height:2.6rem;"> {{udf.editors.count}} {% if binding %} form {% endif %} editor{{udf.editors.count|pluralize}} &nbsp; <i class="fa fa-angle-down" aria-hidden="true"></i></a>
@@ -55,6 +57,7 @@
         <p class="p-2 mb-0 text-center text-muted">No {% if binding%}form {% endif %}editors</p>
       {% endif %}
     </div>
+
     {% if not binding %}
       <div class="card mt-2 mr-2 p-2 {{ udf.published|yesno:'border-success text-success,text-muted' }}" title="{{ udf.published|yesno:'Published,Unpublished' }}">
         <p class="m-0"><i class="fa fa-{{ udf.published|yesno:'eye,eye-slash' }} px-1" style="font-size: large;"></i></p>
@@ -70,6 +73,7 @@
         {% endif %}
       </p>
     </div>
+
     {% if binding %}
       <div class="card mt-2 mr-2 p-2">
         <p class="text-muted small m-0">
@@ -88,6 +92,7 @@
         {% endif %}
       </p>
     </div>
+
   </div>
   <div id="udf-{{binding_type}}-{{udf.id}}-{{binding.id}}-preview" class="collapse mt-3 rounded box-shadow">
     <form id="udf-{{binding_type}}-{{udf.id}}-{{binding.id}}" class="bg-lightblue p-4 rounded">
