--- a/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/time_spent.html
@@ -11,7 +11,7 @@
   {% include 'common/analytics_plot.html' with title='Time spent per content type' plot=time_spent_per_model_plot caption="Total time spent by content type for content objects within this assessment. This metric is imperfect; it is calculated by the total time the create and update forms are open for each content object.  This may overestimate time if a form is open but a user is not actively using it; or underestimate time where users are reviewing data in the read-only form. If content is missing or data appears inaccurate, please let us know, we'd like to improve this metric!" %}
   <div class="card box-shadow">
     <div class="card-body">
-      <h3 class="text-center">Total time per content type</h3>
+      <h3 class="text-center">Total time and time per item summary</h3>
       {{time_spent_tbl|safe}}
       <p class=text-muted>
         Total time spent for each content type used in an assessment. This includes summary statistics for the amount of time individual extractions take (in seconds), as well as the total time (in hours) that has been spent for all extractions of this type for the current assessment.
