UDF style updates (#989)
* render udf form inside study form

* Add model for saved data from UDF

* remove duplicate widget

* add todo for form tag issue

* render saved UDF data on study detail page

* add mixin for adding UDF to detail pages

* lint

* add methods for rendering tag forms

* fix errors when rendering tag forms

* cache html

* move to get_app_config

* render udfs on the tag page
currently renders all udfs even if no tags are selected

* add tag udf content to admin site

* wip set up api to save udf data

* add tag udf data into ref.to_dict

* fix templates

* fix detail pages for model/tag binding

* fix bugs for demo

* improve UDF form layout

* initialize/save UDF content

* add udf content to detail page

* fix update or create mistake

* backport changes for demo

* reduce queries in forms w/ UDF

* changes from review

* remove generic relation

* remove import

* fix test now that rendering works properly

* fix udf detail pages

* move fixture modelbinding to different assessment

* fix tests

* lint js

* add dynamicformlisteners to necessary pages

* fix formatting and tests

* fix merge with other UDF branch

* fix saving and show correct UDFs

* lint

* create UDFCache class

* add cache to endpoint form

* set udf contents when form is saved

* integrate cache into detail pages

* delete cache for modelbinding post save

* add caching to study form

* clean up cache class

* fix content cache to work on detail pages

* fix attribute error and add type hints

* update udf with values

* return failure

* remove store inject

* caching, formatting

* maintain UDF values

* add collapsed view

* overwrite state on save

* work with other field types

* add unique_together constraint

* switch format for multi checkboxes

* update tag form stylings

* lint

* add form error handling

* update error handling

* workfl

--- a/hawc/apps/udf/templates/udf/udf_form.html
+++ b/hawc/apps/udf/templates/udf/udf_form.html
@@ -2,24 +2,27 @@
 
 {% block content %}
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12 pad-form">
       {% crispy form %}
-    </div>
-    <div class="col-md-6 card">
-      <div class="card-body">
-        <h4 class="card-title">Form Preview</h4>
-        <div id="schema-preview-frame">
-          <div class="alert alert-info" role="alert">Click Preview to see what your form will look like!</div>
-        </div>
-      </div>
     </div>
   </div>
 {% endblock %}
 
 {% block extrajs %}
   <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      htmx.on("htmx:afterSwap", window.app.HAWCUtils.dynamicFormListeners);
+    $(window).ready(function() {
+      $("#schema-preview-btn").on("click", function() {
+        $("#schema-preview-frame").removeClass('show');
+      });
+      $("#schema-preview-btn").on("htmx:afterOnLoad", function() {
+        window.app.HAWCUtils.dynamicFormListeners();
+        $("#schema-preview-frame").collapse("show");
+      });
+      $('#load-example').on("click", function(e){
+        e.preventDefault();
+        const demo = '{"fields": [{"type": "char","name": "name","label": "Name","help_text": "First and last name","css_class": "col-6"},{"type": "integer","name": "age","required": false,"label": "Age","min_value": 21,"css_class": "col-6"},{"type": "multiple_choice","name": "favorite_foods","required": false,"label": "Favorite foods","widget": "checkbox_select_multiple","choices": [["pizza", "Pizza"],["ice_cream", "Ice cream"],["taco", "Tacos"]]}]}';
+        $('#id_schema').val(demo)
+      })
     });
   </script>
 {% endblock extrajs %}
