--- a/hawc/apps/assessment/templates/assessment/assessment_home.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_home.html
@@ -10,6 +10,10 @@
       {% else %}
         <p class="dropdown-item help-block">Assessment creation disabled - please <a href="{% url 'contact' %}">contact us</a> if needed.</p>
       {% endif %}
+      {% if feature_flags.ENABLE_UDF %}
+        <span class="dropdown-header">User Defined Forms</span>
+        <a class="dropdown-item" href="{% url 'udf:udf_list' %}">View form list</a>
+      {% endif %}
     {% endactions %}
   </div>
   <p>Welcome to the HAWC portal. Here you're able to create new assessments or work on existing assessments.</p>
